--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -56,7 +56,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; TechCon 2024. All rights reserved.</p>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
