--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -57,7 +57,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechCon. All Rights Reserved.</p>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
