checking for consistency

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -22,7 +22,7 @@
         <section>
             <h2>Contact Information</h2>
             <p>If you have any questions or need further information, feel free to reach out to us!</p>
-            <p>Email us at: <a href="mailto:contact@techcon2024.com">contact@techcon2024.com</a></p>
+            <p>Email us at: <a href="mailto:email@example.com">contact@techcon2024.com</a></p>
             
             <h3>Follow Us on Social Media:</h3>
             <ul>
