--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -76,7 +76,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>&copy; copyright S2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
